# tdbc

./: ChangeLog  Makefile.in  MakingReleases.txt  README  configure  configure.in  dosfix.tcl  makeWinBinaries.tcl  pkgIndex.tcl.in  tclooConfig.sh
generic/: tdbc.c  tdbc.h  tdbcStubLib.c  tdbcTokenize.c
misc/: MakingReleases.txt  makeWinBinaries.tcl
tdbc/: ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.in  license.terms  tdbcConfig.sh.in
tdbc/doc/: Tdbc.3  tdbc.n  tdbc_connection.n  tdbc_mapSqlState.n  tdbc_resultset.n  tdbc_statement.n  tdbc_tokenize.n
tdbc/generic/: tdbc.c  tdbc.decls  tdbc.h  tdbcDecls.h  tdbcInt.h  tdbcStubInit.c  tdbcStubLib.c  tdbcTokenize.c
tdbc/tclconfig/: ChangeLog  tcl.m4
tdbc/tests/: all.tcl  tdbc.test  tokenize.test
tdbc/tools/: genExtStubs.tcl  genStubs.tcl
tdbc/win/: makefile.vc  nmakehlp.c  rules.vc
tdbcmysql/: ChangeLog  Makefile.in  README  TODO  configure  configure.in
tdbcmysql/doc/: tdbc_mysql.n
tdbcmysql/generic/: fakemysql.h  mysqlCompat.c  mysqlNative.c  mysqlStubDefs.txt  mysqlStubInit.c  mysqlStubs.h  tdbcmysql.c
tdbcmysql/tests/: tdbcmysql.test
tdbcodbc/: ChangeLog  Makefile  Makefile.in  README  TODO  aclocal.m4  configure  configure.in
tdbcodbc/doc/: tdbc_odbc.n
tdbcodbc/generic/: fakesql.h  odbcStubDefs.txt  odbcStubInit.c  odbcStubs.h  tdbcodbc.c  tdbcodbc.c~
tdbcodbc/tclconfig/: ChangeLog  tcl.m4
tdbcodbc/tests/: all.tcl  tdbcodbc.test  test.ldb  test.mdb
tdbcodbc/win/: makefile.vc
tdbcoracle/: ChangeLog  Makefile  Makefile.in  TODO  config.status  configure  configure.in
tdbcoracle/generic/: tdbcoracle.c
tdbcoracle/tests/: current.test
tdbcoracle/tests/future/: tdbcoracle.test
tdbcpostgre/: ChangeLog  Makefile.in  TODO  configure.in
tdbcpostgre/autom4te.cache/: traces.0
tdbcpostgre/generic/: tdbcpostgre.c
tdbcpostgres/: ChangeLog  Makefile.in  README  TODO  configure  configure.in
tdbcpostgres/autom4te.cache/: output.0  traces.0
tdbcpostgres/doc/: tdbc_postgres.n
tdbcpostgres/generic/: fakepq.h  pqStubDefs.txt  pqStubInit.c  pqStubs.h  tdbcpostgres.c
tdbcpostgres/tests/: all.tcl  current.test  tdbcpostgres.test
tdbcpostgres/tests/future/: tdbcpostgre.test  tdbcpostgre.test.tcl
tdbcsqlite3/: ChangeLog  Makefile.in  README  configure  configure.in  tempTest.tcl
tdbcsqlite3/doc/: tdbc_sqlite3.n
tdbcsqlite3/tests/: tdbcsqlite3.test
tdbcsqlite3/win/: makefile.vc  nmakehlp.c
tests/: all.tcl
tools/: genStubs.tcl
win/: makefile.vc
